Small changes to introduction

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
     <section id="introduction">
         <h2>Introduction</h2>
         <p>
-            Hello! I'm Brian, and I love tackling data challenges across various industries. 
+            Below are the featured data science/analytics projects of Brian T. McElroy, based in Tucson, Arizona, USA.
+            I love tackling data challenges across various industries, and telling stories through graphs and statistical insights.
             I've organized my portfolio below into sections so you can quickly find 
             the type of projects that interest you most.
         </p>
