Add skills and current projects

--- a/index.html
+++ b/index.html
@@ -78,7 +78,77 @@
             the type of projects that interest you most.
         </p>
     </section>
+    
+    <!-- Skills -->
+    <section id="eda-projects">
+        <ol>
+            <li>
+                <p>
+                    Machine learning
+                </p>
+            </li>
+            <li>
+                <p>
+                    Tensorflow and keras
+                </p>
+            </li>
+            <li>
+                <p>
+                    SQL / relational databases
+                </p>
+            </li>
+            <li>
+                <p>
+                    Analytics and statistics
+                </p>
+            </li>
+            <li>
+                <p>
+                    sklearn
+                </p>
+            </li>
+            <li>
+                <p>
+                    Cluster Analysis
+                </p>
+            </li>
+            <li>
+                <p>
+                    Computer Vision
+                </p>
+            </li>
+        </ol>
+    </section>
 
+    <!-- Upcoming Projects -->
+    <section id="upcoming-projects">
+        <h2>Upcoming Projects</h2>
+        <p>
+            Below are some of the current projects that will be put into repositories in the near future: 
+        </p>
+        <ol>
+            <li>
+                <p>
+                    <b>University of Arizona's Hearing the Invisible</b> is an art installation to explore the insights that turning 
+                    brain waves into music can provide. Besides being a production manager and lighting designer for the project,
+                    I am also writing a patented protocol for translating EEG data into lighting DMX data. There are multiple difficulties
+                    faced in allowing for a visual representation of lighting data, primarily having to do with optimal refresh rate for
+                    visual acuity and intensity perception at high frequencies. Because DMX is sampled at 40 Hz and meaningful brain
+                    waves go up to 60 Hz or even 120 Hz depending on the region, resampling introduces challenges. It is likely that
+                    sampling z-scores of brain wave ranges (delta, gamma, etc.) will result in a far more visually acute effect.
+                </p>
+            </li>
+            <li>
+                <p>
+                    A private medical education company is seeking to predict churn risk and other measures of
+                    student success or failure in its student population. It also seeks to aid admissions counselors in directing 
+                    prospective students towards particular fields based on test scores, personality tests, etc. This is a commissioned 
+                    work that will have to be carefully anonymized for publishing on my portfolio.
+                </p>
+            </li>
+        </ol>
+    </section>
+    
     <!-- EDA Projects Section -->
     <section id="eda-projects">
         <h2>EDA Projects</h2>
