Add skills header

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     
     <!-- Skills -->
     <section id="eda-projects">
+        <h2>Skills</h2>
         <ol>
             <li>
                 <p>
