Revise portfolio content and structure
Updated the content and structure of the portfolio page, including the introduction, skills, upcoming projects, and various project sections.

--- a/index.html
+++ b/index.html
@@ -72,22 +72,18 @@
     <section id="introduction">
         <h2>Introduction</h2>
         <p>
-            Below are the featured data science/analytics projects of Brian T. McElroy, based in Tucson, Arizona, USA.
-            I love tackling data challenges across various industries, and telling stories through graphs and statistical insights.
+            Below are the featured data science and analytics projects of Brian T. McElroy, based in Tucson, Arizona, USA.
+            Please see my <a href="https://www.linkedin.com/in/brian-t-mcelroy/">LinkedIn</a> for background information.
+            I combine a career in computational neuroscience with creative technology in production environments. 
             I've organized my portfolio below into sections so you can quickly find 
-            the type of projects that interest you most.
+            the type of projects that are relevant to you.
         </p>
     </section>
     
     <!-- Skills -->
     <section id="eda-projects">
-        <h2>Skills</h2>
+        <h2>Featured DS/ML Skills</h2>
         <ol>
-            <li>
-                <p>
-                    Machine learning
-                </p>
-            </li>
             <li>
                 <p>
                     Tensorflow and keras
@@ -262,3 +258,4 @@
 
 </body>
 </html>
+
